...
                ) {
                    Text(stringResource(R.string.cancel))
                }
                TextButton(
                    onConfirm,
                    enabled = enabled && state.selected.isNotEmpty(),
                    modifier = Modifier.testTag("highlight-import-confirm"),
                ) {
                    Text(stringResource(R.string.confirm))
                }
            }
        }
    }
...
